Export new media types